little layout issues fixed in custom.css file. fixed web.xml file after changing crm -> honeycrm. added loc for core system

--- a/war/custom.css
+++ b/war/custom.css
@@ -26,7 +26,7 @@ body {
 
 /* HEADER */
 
-.header {
+.honey_header {
 	margin: 10px;	
 	color: white;
 }
@@ -82,6 +82,12 @@ body {
 	border-left: 5px solid white;
 }
 
+.detail_view_label {
+/*	font-weight: bold;*/
+	font-style: italic;
+	text-align: right;
+}
+
 .detail_view_content {
 	padding-bottom: 5px;
 	width: 100%;
@@ -99,13 +105,19 @@ body {
 	margin-bottom: 5px;
 }
 
-.detail_view_relation {
-	border-top: 1px solid #92c1f0; 
+.relationship_title {
+	font-weight: bold;	
 	padding-top: 2px;
+}
+	
+
+.detail_view_relation {
+/*	border-top: 1px solid #92c1f0; 
+	padding-top: 2px;*/
 }
 
 .list_view {
-	width: 30%;
+/*	width: 30%; */
 	float: left;
 	padding: 5px;
 }
@@ -137,7 +149,7 @@ body {
 }
 
 .list_table td{
-	padding: 5px;
+	padding: 3px;
 }
 
 .table_header {
@@ -176,4 +188,13 @@ tr.table_row:active {
 
 .clear {
 	clear: both;
+}
+
+.gwt-HTML ul {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+tr {
+	vertical-align: top;
 }
